--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -453,4 +453,21 @@ url = {http://dx.doi.org/10.1504/IJGUC.2015.066395},
 year = {2015}
 }
 
+@MISC{ageofempire1999,
+   author = "Microsoft",
+   title = "Age of Empires II : The Age of Kings",
+   howpublished = "[CD-ROM]",
+   year = 1999,
+}
+@misc{MapBox,
+  title = {MapBox},
+  howpublished = {\url{https://www.mapbox.com}},
+  note = {Accessed: 2020-01-15}
+}
+
+@misc{OpenData,
+  title = {open data.swiss},
+  howpublished = {\url{https://opendata.swiss/en/dataset/fahrplanentwurf-2019-hrdf/resource/32dfd2e1-86a6-4680-9935-b76226dddee1}},
+  note = {Accessed: 2020-01-07}
+}
 
